# SDL2-airfight-demo

./: CMakeLists.txt  README.md  testSDL2.cpp
src/: game.cpp  game.h  main.cpp  object.h  sceneBase.h  sceneMain.cpp  sceneMain.h  sceneTitle.cpp  sceneTitle.h
